# pyzzz_calc

./: .gitignore  Makefile  README.md  main.spec  pyproject.toml  requirements.txt  roadmap.md
fe/: components.d.ts  forge.config.ts  index.html  package-lock.json  package.json  storage.ts  tsconfig.json  vite.renderer.config.ts
fe/src/: About.vue  App.vue  Build.vue  Calc.vue  DiscInput.vue  DiscShow.vue  DiscsShow.vue  EnemyInput.vue  SkillInput.vue  StatInput.vue  StatShow.vue  StatsView.vue  axios.ts  constants.js  main.ts  model.ts  renderer.ts
pyzzz/: __init__.py  agent.py  buff.py  build.py  delta_analyzer.py  discs.py  dmg.py  enemy.py  env.py  hit.py  model.py  multiplier.py  search.py  util.py  weapon.py  weapons.py
pyzzz/agents/: __init__.py  agent.py  agent_with_data.py  ellen.py  grace.py  jane.py  lucy.py  lycaon.py  nekomata.py  nicole.py  piper.py  qingyi.py  rina.py  seth.py  soldier11.py  soukaku.py  zhuyuan.py
pyzzz/dataset/: __init__.py  agents_ascensions.csv  agents_basic.csv  agents_passives.csv  agents_profiles.csv  agents_skills.csv  load_skills.py  mappings.py  marks.py  skills.csv  tools.py  weapons.csv  weapons_ascensions.csv  weapons_growth.csv  weapons_levelup.csv  weapons_zeros.csv  zzz.gg.agents.js  zzz.gg.agents.json  zzz.gg.weapons.js  zzz.gg.weapons.json
pyzzz/server/: app.py  calc_impl.py  main.py
tests/: __init__.py  agents_test.py  anomaly_test.py  build_test.py  context.py  dataset_test.py  dmg_test.py  env_test.py  model_test.py  weapons_test.py
